--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "next": "14.2.24",
     "react": "^18",
